[workspace]
members = [".", "sqlx-plus-macros", "sqlx-plus-test"]

[package]
name = "sqlx-plus"
version = "0.3.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A sqlx extension library focused on making INSERT more convenient."
repository = "https://github.com/sifyfy/sqlx-plus"
readme = "README.md"
authors = ["sifyfy <sifyfy@sifyfy.dev>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1", features = ["backtrace"] }
async-trait = "0.1"
itertools = "0.10"
sqlx = { version = "0.6", features = ["runtime-tokio-rustls", "all-types"] }
tokio = { version = "1", features = ["full"] }

sqlx-plus-macros = "0.1" # For Release
# sqlx-plus-macros = { path = "./sqlx-plus-macros" } # For Dev

[features]
sqlite = ["sqlx/sqlite"]
mysql = ["sqlx/mysql"]
postgres = ["sqlx/postgres"]
mssql = ["sqlx/mssql"]
