[package]
name = "sqlx-plus-macros"
version = "0.1.1"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A proc-macro implementations for sqlx-plus"
repository = "https://github.com/sifyfy/sqlx-plus"
authors = ["sifyfy <sifyfy@sifyfy.dev>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = "1"
quote = "1"
